// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: AeroPress エスプレッソ風（少量濃縮） > 60ml・中煎り・バランス 1`] = `
{
  "doseG": 22,
  "dripperId": "aeropress-espresso",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "極細挽き（約274μm）",
    "micron": 274,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "aeropress-espresso",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 60,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 3,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "pour",
      "toWaterG": 65,
    },
    {
      "atSec": 11,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 61,
      "durationSec": 20,
      "kind": "press",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 81,
  "warnings": [],
  "waterG": 65,
}
`;

exports[`golden: AeroPress（加圧） > 中煎り・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "aeropress",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "細挽き（約500μm）",
    "micron": 500,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "aeropress",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 15.9,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 88,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 270,
    },
    {
      "atSec": 77,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 172,
      "durationSec": 25,
      "kind": "press",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 88,
  "totalTimeSec": 197,
  "warnings": [],
  "waterG": 270,
}
`;

exports[`golden: AeroPress（容量上限クランプ） > チャンバー容量(250ml)を超える指定は250mlへクランプされ warning が出る 1`] = `
{
  "doseG": 17,
  "dripperId": "aeropress",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "細挽き（約500μm）",
    "micron": 500,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "aeropress",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 600,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 15.9,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 88,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 270,
    },
    {
      "atSec": 77,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 172,
      "durationSec": 25,
      "kind": "press",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 88,
  "totalTimeSec": 197,
  "warnings": [
    "AeroPressは100〜250ml向けの器具のため、仕上がり量を250mlとして計算しました。",
  ],
  "waterG": 270,
}
`;

exports[`golden: April Brewer > 浅煎り・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "april",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約680μm）",
    "micron": 680,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "light",
    },
    "equipment": {
      "dripperId": "april",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "light",
        "tempC": 95,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 85,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 130,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 175,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 220,
      "expectedEndSec": 391,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 95,
  "totalTimeSec": 391,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: CAFEC フラワー > 浅煎り・明るく華やかな好み 1`] = `
{
  "doseG": 18,
  "dripperId": "cafec-flower",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約755μm）",
    "micron": 755,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "light",
    },
    "equipment": {
      "dripperId": "cafec-flower",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 2,
      "bitterness": -1,
      "body": -1,
      "clarity": 2,
      "sweetness": 1,
    },
  },
  "ratio": 15.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 18.2,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "light",
        "tempC": 92.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": -1,
        "clarity": 2,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 2,
        "sweetness": 1,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 49.5,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 128.3,
    },
    {
      "atSec": 85,
      "kind": "pour",
      "note": "center",
      "toWaterG": 206.7,
    },
    {
      "atSec": 130,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 175,
      "expectedEndSec": 346,
      "kind": "drawdown",
    },
  ],
  "targetEy": 18.2,
  "targetTds": 1.32,
  "tempC": 92.5,
  "totalTimeSec": 346,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: Clever Dripper（浸漬） > 中煎り・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "clever",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約780μm）",
    "micron": 780,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "clever",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [
        "kasuya-switch-hybrid-2025",
      ],
      "templateId": "switchMode.hybrid",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "closed",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 285,
    },
    {
      "atSec": 80,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 85,
      "kind": "wait",
      "untilSec": 256,
    },
    {
      "atSec": 256,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 256,
      "expectedEndSec": 324,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 324,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: French Press（全浸漬） > 中煎り・コク深い好み 1`] = `
{
  "doseG": 17.5,
  "dripperId": "french-press",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約740μm）",
    "micron": 740,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "french-press",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": -1,
      "bitterness": 1,
      "body": 2,
      "clarity": -1,
      "sweetness": 1,
    },
  },
  "ratio": 16.6,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 21.6,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 1,
        "clarity": -1,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": -1,
        "sweetness": 1,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 48.1,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 290,
    },
    {
      "atSec": 80,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 265,
      "durationSec": 25,
      "kind": "press",
    },
  ],
  "targetEy": 21.6,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 290,
  "warnings": [],
  "waterG": 290,
}
`;

exports[`golden: HARIO Switch 360（3モード） > クリア感優位 -> 透過主体モード 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約748μm）",
    "micron": 747.5,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": -1,
      "clarity": 2,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 19.3,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 88.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 0,
        "clarity": 2,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [],
      "templateId": "switchMode.percolation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 19.3,
  "targetTds": 1.32,
  "tempC": 88.5,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: HARIO Switch 360（3モード） > バランス -> ハイブリッドモード（Kasuya型・二段温度） 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約650μm）",
    "micron": 650,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [
        "kasuya-switch-hybrid-2025",
      ],
      "templateId": "switchMode.hybrid",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 95,
      "kind": "valve",
      "state": "closed",
    },
    {
      "atSec": 95,
      "kind": "temperatureChange",
      "toTempC": 80,
    },
    {
      "atSec": 124,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 129,
      "kind": "wait",
      "untilSec": 167,
    },
    {
      "atSec": 167,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 167,
      "expectedEndSec": 338,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 338,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: HARIO Switch 360（3モード） > ボディ優位 -> 浸漬主体モード 1`] = `
{
  "doseG": 16.5,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約568μm）",
    "micron": 567.5,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 2,
      "clarity": -1,
      "sweetness": 0,
    },
  },
  "ratio": 17,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20.5,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 91,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 0,
        "clarity": -1,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [],
      "templateId": "switchMode.immersion",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "closed",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 45.4,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 280,
    },
    {
      "atSec": 79,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 84,
      "kind": "wait",
      "untilSec": 332,
    },
    {
      "atSec": 332,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 332,
      "expectedEndSec": 500,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20.5,
  "targetTds": 1.32,
  "tempC": 91,
  "totalTimeSec": 500,
  "warnings": [],
  "waterG": 280,
}
`;

exports[`golden: Iced > AeroPress・Iced・250ml（浸漬/加圧型は氷が混ざりにくいためwarningを追加） 1`] = `
{
  "doseG": 21,
  "dripperId": "aeropress",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "細挽き（約460μm）",
    "micron": 460,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "aeropress",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 13.1,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.67,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 89,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "iced",
      "params": {},
      "sourceRefs": [],
      "templateId": "iced.dilutionCompensation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 57.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 179,
    },
    {
      "atSec": 60,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 155,
      "durationSec": 25,
      "kind": "press",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.67,
  "tempC": 89,
  "totalTimeSec": 180,
  "warnings": [
    "サーバーにあらかじめ氷 96g を入れてください。",
    "抽出後、氷とよくかき混ぜてから飲んでください。混ざりが足りないとぬるく感じます。",
  ],
  "waterG": 275,
}
`;

exports[`golden: Iced > HARIO Switch・Iced・クリア感優位(透過主体モード)は実際のモードで判定しwarningを出さない 1`] = `
{
  "doseG": 21,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約708μm）",
    "micron": 707.5,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": -1,
      "clarity": 2,
      "sweetness": 0,
    },
  },
  "ratio": 14,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 19.3,
        "tds": 1.67,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 89.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 0,
        "clarity": 2,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [],
      "templateId": "switchMode.percolation",
    },
    {
      "paramKey": "iced",
      "params": {},
      "sourceRefs": [],
      "templateId": "iced.dilutionCompensation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 57.599999999999994,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 76.8,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "center",
      "toWaterG": 192,
    },
    {
      "atSec": 110,
      "expectedEndSec": 225,
      "kind": "drawdown",
    },
  ],
  "targetEy": 19.3,
  "targetTds": 1.67,
  "tempC": 89.5,
  "totalTimeSec": 225,
  "warnings": [
    "サーバーにあらかじめ氷 103g を入れてください。",
  ],
  "waterG": 295,
}
`;

exports[`golden: Iced > HARIO Switch・Iced・バランス(ハイブリッドモード)も弁を閉じる区間があるためwarningを出す 1`] = `
{
  "doseG": 20.5,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約610μm）",
    "micron": 610,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 14.1,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.67,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 91,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [
        "kasuya-switch-hybrid-2025",
      ],
      "templateId": "switchMode.hybrid",
    },
    {
      "paramKey": "iced",
      "params": {},
      "sourceRefs": [],
      "templateId": "iced.dilutionCompensation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 56.4,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 75.2,
    },
    {
      "atSec": 95,
      "kind": "valve",
      "state": "closed",
    },
    {
      "atSec": 95,
      "kind": "temperatureChange",
      "toTempC": 81,
    },
    {
      "atSec": 114,
      "kind": "pour",
      "note": "center",
      "toWaterG": 188,
    },
    {
      "atSec": 119,
      "kind": "wait",
      "untilSec": 144,
    },
    {
      "atSec": 144,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 144,
      "expectedEndSec": 257,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.67,
  "tempC": 91,
  "totalTimeSec": 257,
  "warnings": [
    "サーバーにあらかじめ氷 102g を入れてください。",
    "抽出後、氷とよくかき混ぜてから飲んでください。混ざりが足りないとぬるく感じます。",
  ],
  "waterG": 290,
}
`;

exports[`golden: Iced > HARIO Switch・Iced・ボディ優位(浸漬主体モード)は実際のモードで判定しwarningを出す 1`] = `
{
  "doseG": 20.5,
  "dripperId": "hario-switch",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約528μm）",
    "micron": 527.5,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-switch",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 2,
      "clarity": -1,
      "sweetness": 0,
    },
  },
  "ratio": 14.1,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20.5,
        "tds": 1.67,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 92,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 0,
        "clarity": -1,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "switchMode",
      "params": {},
      "sourceRefs": [],
      "templateId": "switchMode.immersion",
    },
    {
      "paramKey": "iced",
      "params": {},
      "sourceRefs": [],
      "templateId": "iced.dilutionCompensation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "valve",
      "state": "closed",
    },
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 56.4,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "toWaterG": 188,
    },
    {
      "atSec": 62,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 67,
      "kind": "wait",
      "untilSec": 260,
    },
    {
      "atSec": 260,
      "kind": "valve",
      "state": "open",
    },
    {
      "atSec": 260,
      "expectedEndSec": 373,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20.5,
  "targetTds": 1.67,
  "tempC": 92,
  "totalTimeSec": 373,
  "warnings": [
    "サーバーにあらかじめ氷 102g を入れてください。",
    "抽出後、氷とよくかき混ぜてから飲んでください。混ざりが足りないとぬるく感じます。",
  ],
  "waterG": 290,
}
`;

exports[`golden: Iced > 浅煎り・Iced・250ml 1`] = `
{
  "doseG": 20.5,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約580μm）",
    "micron": 580,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "light",
    },
    "equipment": {
      "dripperId": "hario-v60",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 14.1,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.67,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "light",
        "tempC": 95,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
    {
      "paramKey": "iced",
      "params": {},
      "sourceRefs": [],
      "templateId": "iced.dilutionCompensation",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 56.4,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 75.2,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "center",
      "toWaterG": 188,
    },
    {
      "atSec": 110,
      "expectedEndSec": 223,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.67,
  "tempC": 95,
  "totalTimeSec": 223,
  "warnings": [
    "サーバーにあらかじめ氷 102g を入れてください。",
  ],
  "waterG": 290,
}
`;

exports[`golden: KONO 名門 > 中煎り・バランス 1`] = `
{
  "doseG": 18,
  "dripperId": "kono",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約600μm）",
    "micron": 600,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "kono",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 15.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 89,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 49.5,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 81.8,
    },
    {
      "atSec": 100,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114.1,
    },
    {
      "atSec": 160,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.6,
    },
    {
      "atSec": 220,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 280,
      "expectedEndSec": 508,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 89,
  "totalTimeSec": 508,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: Kalita Wave > 中煎り・honey・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "kalita-wave",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約700μm）",
    "micron": 700,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "honey",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "kalita-wave",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "honey",
        "roastLevel": "medium",
        "tempC": 89.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 85,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 130,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 175,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 220,
      "expectedEndSec": 425,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 89.5,
  "totalTimeSec": 425,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: ORIGAMI > 中煎り・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "origami",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約640μm）",
    "micron": 640,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "origami",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 85,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 130,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 175,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 220,
      "expectedEndSec": 402,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 402,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: Orea Brewer > 中煎り・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "orea",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約600μm）",
    "micron": 600,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "orea",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 328,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 328,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: V60 > 明るく華やかな好み 1`] = `
{
  "doseG": 18,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中挽き（約745μm）",
    "micron": 745,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "light",
    },
    "equipment": {
      "dripperId": "hario-v60",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 2,
      "bitterness": -1,
      "body": -1,
      "clarity": 2,
      "sweetness": 1,
    },
  },
  "ratio": 15.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 18.2,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "light",
        "tempC": 92.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": -1,
        "clarity": 2,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 2,
        "sweetness": 1,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 49.5,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 128.3,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "center",
      "toWaterG": 206.7,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 145,
      "expectedEndSec": 316,
      "kind": "drawdown",
    },
  ],
  "targetEy": 18.2,
  "targetTds": 1.32,
  "tempC": 92.5,
  "totalTimeSec": 316,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: V60 > 浅煎り・washed・バランス 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "light",
    },
    "equipment": {
      "dripperId": "hario-v60",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "light",
        "tempC": 94,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 94,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: V60 > 深煎り・ナチュラル・コク深い好み 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約543μm）",
    "micron": 542.5,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "natural",
      "roastLevel": "dark",
    },
    "equipment": {
      "dripperId": "hario-v60",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": -1,
      "bitterness": 1,
      "body": 2,
      "clarity": -1,
      "sweetness": 1,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20.3,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "natural",
        "roastLevel": "dark",
        "tempC": 84.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 1,
        "clarity": -1,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": -1,
        "sweetness": 1,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 85.5,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "center",
      "toWaterG": 152,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 218.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20.3,
  "targetTds": 1.32,
  "tempC": 84.5,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: coldDrip（点滴式水出し） > hario-mizudashi・アイス指定は無視されwarningが出る 1`] = `
{
  "doseG": 24,
  "dripperId": "hario-mizudashi",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "粗挽き（約1250μm）",
    "micron": 1250,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-mizudashi",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 11.9,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "general",
      "params": {},
      "sourceRefs": [
        "kyoto-style-cold-drip",
      ],
      "templateId": "coldDrip.summary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "pour",
      "toWaterG": 285,
    },
    {
      "atSec": 0,
      "kind": "wait",
      "untilSec": 36000,
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 4,
  "totalTimeSec": 36000,
  "warnings": [
    "水出しはもともと冷たいため、アイスの設定は反映されません。",
  ],
  "waterG": 285,
}
`;

exports[`golden: coldDrip（点滴式水出し） > iwaki-mizudashi・バランス 1`] = `
{
  "doseG": 24,
  "dripperId": "iwaki-mizudashi",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "粗挽き（約1250μm）",
    "micron": 1250,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "iwaki-mizudashi",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 11.9,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "general",
      "params": {},
      "sourceRefs": [
        "kyoto-style-cold-drip",
      ],
      "templateId": "coldDrip.summary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "pour",
      "toWaterG": 285,
    },
    {
      "atSec": 0,
      "kind": "wait",
      "untilSec": 36000,
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 4,
  "totalTimeSec": 36000,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: カフェラテ（ミルクドリンク） > Hot・60mlショット・中煎り・バランス 1`] = `
{
  "doseG": 22,
  "dripperId": "cafe-latte",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "極細挽き（約274μm）",
    "micron": 274,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "cafe-latte",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 60,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 3,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "pour",
      "toWaterG": 65,
    },
    {
      "atSec": 11,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 61,
      "durationSec": 20,
      "kind": "press",
    },
    {
      "atSec": 86,
      "kind": "addMilk",
      "milkG": 240,
      "temperature": "steamed",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 86,
  "warnings": [],
  "waterG": 65,
}
`;

exports[`golden: カフェラテ（ミルクドリンク） > Iced・60mlショット・中煎り・バランス（氷でコーヒー自体は薄めない） 1`] = `
{
  "doseG": 22,
  "dripperId": "cafe-latte",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "極細挽き（約274μm）",
    "micron": 274,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "cafe-latte",
    },
    "serveStyle": "iced",
    "strength": 0,
    "targetVolumeMl": 60,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 3,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "kind": "pour",
      "toWaterG": 65,
    },
    {
      "atSec": 11,
      "kind": "stir",
      "method": "spoon",
    },
    {
      "atSec": 61,
      "durationSec": 20,
      "kind": "press",
    },
    {
      "atSec": 86,
      "kind": "addMilk",
      "milkG": 210,
      "temperature": "cold",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 86,
  "warnings": [
    "あらかじめ氷を入れたグラスを用意してください。",
  ],
  "waterG": 65,
}
`;

exports[`golden: グラインダー併記 > 1zpresso-jx-pro 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "4周 + 6クリック",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "1zpresso-jx-pro",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > 1zpresso-zp6 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "2周 + 3クリック",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "1zpresso-zp6",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > Comandante C40 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "19 クリック",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "comandante-c40",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > De'Longhi KG521J-M 指定時は confidence: estimated 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "estimated",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 9",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "delonghi-kg521",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > baratza-encore 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 23",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "baratza-encore",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > df64 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 58",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "df64",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > fellow-ode2 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 6",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "fellow-ode2",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > mahlkonig-ek43 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 9.5",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "mahlkonig-ek43",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > niche-zero 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "community",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 47",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "niche-zero",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: グラインダー併記 > wilfa-svart 指定時に目盛が併記される 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "confidence": "estimated",
    "generalLabel": "中細挽き（約620μm）",
    "micron": 620,
    "setting": "目盛 9",
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
      "grinderId": "wilfa-svart",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20,
  "targetTds": 1.32,
  "tempC": 90,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;

exports[`golden: 極端値・大量抽出 > 1000ml・強い好み全部盛り 1`] = `
{
  "doseG": 74.5,
  "dripperId": "kalita-wave",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中粗挽き（約1000μm）",
    "micron": 1000,
  },
  "input": {
    "bean": {
      "origins": [],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "kalita-wave",
    },
    "serveStyle": "hot",
    "strength": 2,
    "targetVolumeMl": 1000,
    "taste": {
      "acidity": 2,
      "bitterness": 2,
      "body": 2,
      "clarity": 2,
      "sweetness": 2,
    },
  },
  "ratio": 15.5,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 20.2,
        "tds": 1.5,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 91,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "temperature",
      "params": {
        "bitterness": 2,
        "clarity": 2,
      },
      "sourceRefs": [],
      "templateId": "temperature.tasteAdjust",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 2,
        "sweetness": 2,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 204.9,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 333.5,
    },
    {
      "atSec": 85,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 462.1,
    },
    {
      "atSec": 130,
      "kind": "pour",
      "note": "center",
      "toWaterG": 693.1,
    },
    {
      "atSec": 175,
      "kind": "pour",
      "note": "center",
      "toWaterG": 924.1,
    },
    {
      "atSec": 220,
      "kind": "pour",
      "note": "center",
      "toWaterG": 1155,
    },
    {
      "atSec": 265,
      "expectedEndSec": 1097,
      "kind": "drawdown",
    },
  ],
  "targetEy": 20.2,
  "targetTds": 1.5,
  "tempC": 91,
  "totalTimeSec": 1097,
  "warnings": [],
  "waterG": 1155,
}
`;

exports[`golden: 産地補正 > エチオピア(単一産地)は補正なしより低EY・やや高温になり、Rationaleに産地が出る 1`] = `
{
  "doseG": 17,
  "dripperId": "hario-v60",
  "engineVersion": "0.1.0",
  "grind": {
    "generalLabel": "中細挽き（約628μm）",
    "micron": 627.5,
  },
  "input": {
    "bean": {
      "origins": [
        "エチオピア",
      ],
      "process": "washed",
      "roastLevel": "medium",
    },
    "equipment": {
      "dripperId": "hario-v60",
    },
    "serveStyle": "hot",
    "strength": 0,
    "targetVolumeMl": 250,
    "taste": {
      "acidity": 0,
      "bitterness": 0,
      "body": 0,
      "clarity": 0,
      "sweetness": 0,
    },
  },
  "ratio": 16.8,
  "rationale": [
    {
      "paramKey": "strength",
      "params": {
        "ey": 19.7,
        "tds": 1.32,
      },
      "sourceRefs": [
        "sca-brewing-control-chart",
      ],
      "templateId": "strength.target",
    },
    {
      "paramKey": "origin",
      "params": {
        "originNames": "エチオピア",
      },
      "sourceRefs": [],
      "templateId": "origin.profileAdjust",
    },
    {
      "paramKey": "temperature",
      "params": {
        "process": "washed",
        "roastLevel": "medium",
        "tempC": 90.5,
      },
      "sourceRefs": [],
      "templateId": "temperature.byRoastProcess",
    },
    {
      "paramKey": "pours",
      "params": {
        "acidity": 0,
        "sweetness": 0,
      },
      "sourceRefs": [
        "kasuya-4-6-method",
      ],
      "templateId": "pours.fourSixSummary",
    },
  ],
  "steps": [
    {
      "atSec": 0,
      "durationSec": 40,
      "kind": "bloom",
      "waterG": 46.8,
    },
    {
      "atSec": 40,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 80.4,
    },
    {
      "atSec": 75,
      "kind": "pour",
      "note": "circular",
      "toWaterG": 114,
    },
    {
      "atSec": 110,
      "kind": "pour",
      "note": "center",
      "toWaterG": 199.5,
    },
    {
      "atSec": 145,
      "kind": "pour",
      "note": "center",
      "toWaterG": 285,
    },
    {
      "atSec": 180,
      "expectedEndSec": 351,
      "kind": "drawdown",
    },
  ],
  "targetEy": 19.7,
  "targetTds": 1.32,
  "tempC": 90.5,
  "totalTimeSec": 351,
  "warnings": [],
  "waterG": 285,
}
`;
